* Alterada cor do ícone de coração no rodapé; * Alterados típos sanguíneos.

--- a/index.html
+++ b/index.html
@@ -55,18 +55,18 @@
             </div>
 
             <div class="donor">
-                <div class="blood">O+</div>
+                <div class="blood">A+</div>
                 <p>Kamila Hall Felix</p>
             </div>
 
             <div class="donor">
-                <div class="blood">AB-</div>
+                <div class="blood">B+</div>
                 <p>Ana Felix</p>
             </div>
         </section>
     </main>
 
-    <footer>Com Amor <i class="fas fa-heart"></i> Alexsandro Felix</footer>
+    <footer>Com Amor <i class="fas fa-heart" style="color: #FF4F4F;"></i> Alexsandro Felix</footer>
 
 
 
