alterados os nomes dos doadores

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <section class="donors">
             <div class="donor">
                 <div class="blood">AB+</div>
-                <p>Diego Fernandes</p>
+                <p>Guido van Rossum</p>
             </div>
 
             <div class="donor">
@@ -61,7 +61,7 @@
 
             <div class="donor">
                 <div class="blood">B+</div>
-                <p>Ana Felix</p>
+                <p>Ada Lovelace</p>
             </div>
         </section>
     </main>
